<resources>
    <string name="app_name">Flexy User</string>
    <string name="imageView">Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="signUp">Sign Up</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="navigation_drawer_open">Open Navigation Bar</string>
    <string name="navigation_drawer_close">Close Navigation Bar</string>

    <string name="homeSide">Home</string>
    <string name="profileSide">Profile</string>
    <string name="historySide">Order\'s History</string>
    <string name="shareSide">Share</string>
    <string name="logoutSide">Logout</string>
    <string name="othersSide">Others</string>
    <string name="placeholderText">Test String</string>
    <string name="addons">Add Ons</string>
    <string name="proceedToPay">Proceed To Pay</string>
    <string name="otherItem">Add other item</string>
    <string name="proceedToSelectAddress">Select Address</string>
    <string name="selectAddress">Address</string>
    <string name="selectDrink">Drinks</string>
    <string name="selectExtras">Extras</string>

    <string name="aptNumber">Apartment Number</string>
    <string name="city">City</string>
    <string name="postalCode">Postal Code</string>
    <string name="province">Province</string>
    <string name="makePayment">Continue with Paypal</string>
    <string name="cashOnDelivery">Pay On Delivery</string>
    <string name="payment">Payment</string>
    <string name="continueWithPaypal">Continue With Paypal</string>
    <string name="cod">Pay On Delivery</string>
    <string name="creditCardPayment">Pay With Credit Card</string>
    <string name="bitCoinPayment">Pay With Bitcoin</string>
    <string name="orderPlaced">Order Placed</string>
    <string name="call">Call Business Place</string>
    <string name="goHome">Go Home</string>
    <string name="addAddress">Add Address</string>
    <string name="addressTItle">Address Title</string>
    <string name="aptNo">Apartment Number</string>
    <string name="postal">Postal code</string>
    <string name="address">Addresses</string>
    <string name="history">History</string>
    <string name="users">Users</string>
    <string name="stores">Stores</string>
    <string name="products">Products</string>
    <string name="adminMenu">Administrator Options</string>
    <string name="Test">teste</string>
    <string name="empr1">empresa 1</string>
    <string name="btnSave">Save</string>
    <string name="txtViewChooseBusiness">Choose a Business</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintCardNumber">Please enter your card number</string>
    <string name="hintCCMonth">Exp Month</string>
    <string name="hintCCYear">Exp Year</string>
    <string name="hintCCCVV">cvv</string>
    <string name="flexyName">Flexy</string>
    <string name="copyright">copyright</string>
    <string name="thankyou">Thank you message</string>


</resources>