<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/homeSide"/>

        <item android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/historySide"/>

        <item android:id="@+id/nav_address"
            android:icon="@drawable/ic_location"
            android:title="@string/address"/>

    </group>

    <item android:title="@string/othersSide">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/shareSide"/>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logoutSide"/>
        </menu>
    </item>
</menu>