<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentMethods">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewBackgroundPaymentMethods"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.3"
                android:contentDescription="@string/imageView"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/payment"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--*******************************************************-->
            <!--* Order summary -->
            <!--*******************************************************-->

            <View
                android:id="@+id/viewOrderSummary"
                android:layout_width="match_parent"
                android:layout_height="470dp"
                android:background="#B3FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


            <TextView
                android:id="@+id/textViewOrderSummary"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/viewOrderSummary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/viewOrderSummary"
                app:layout_constraintVertical_bias="0.0" />

            <!--*******************************************************-->
            <!--* Payment Options -->
            <!--*******************************************************-->

            <View
                android:id="@+id/viewPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B3FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewOrderSummary" />

            <Button
                android:id="@+id/buttonPaypal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/continueWithPaypal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/viewPayment" />

            <Button
                android:id="@+id/buttonCOD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cod"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPaypal" />

            <Button
                android:id="@+id/buttonCreditCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/creditCardPayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCOD" />

            <Button
                android:id="@+id/buttonBitcoin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/bitCoinPayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCreditCard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>